# LearnGAMES201

./: .gitignore  README.md
GAMES201/P2/: Summary.md
GAMES201/P2/Scripts/: jacobi_iteration.py  mass_spring_explicit.py
GAMES201/ScriptsForReference/: ray_trace_tools.py  taichi_init.py
P2/: Summary.md
PhysicsForGameDevelopers/: README.md
PhysicsForGameDevelopers/C01_BasicConcepts/: Summary.md
PhysicsForGameDevelopers/C01_BasicConcepts/Scripts/: inertia_tensor_calculator.py  mass_calculator.py
PhysicsForGameDevelopers/C02_Kinematics/: Summary.md
PhysicsForGameDevelopers/C02_Kinematics/Scripts/: CMakeLists.txt  ParticleExplosion.cpp  ParticleKinematics.cpp  particle_kinematics.py
PhysicsForGameDevelopers/C02_Kinematics/Shaders/: ParticleExplosion.frag  ParticleExplosion.vert  ParticleKinematics.frag  ParticleKinematics.vert
PhysicsForGameDevelopers/C03_Force/: Summary.md
PhysicsForGameDevelopers/C04_Kinetics/: Summary.md
PhysicsForGameDevelopers/C04_Kinetics/Scripts/: CMakeLists.txt  CannonRevised.cpp
PhysicsForGameDevelopers/C05_Collisions/: Summary.md
PhysicsForGameDevelopers/C06_Projectiles/: Summary.md
PhysicsForGameDevelopers/Scripts/: Shader.cpp  Utils.cpp
PhysicsForGameDevelopers/Scripts/include/: Utils.h
Tests/: example1.py  fractal.py
